@@ -1,5 +1,11 @@
 2014-09-25 Riccardo Mottola <rm@gnu.org>
 
+	* WinUXTheme.h
+	* WinUXTheme.m
+	Initialize widgets with InitCommonControlsEx()
+
+2014-09-25 Riccardo Mottola <rm@gnu.org>
+
 	* WinNSOpenPanel.m
 	Initialize also the Save panel to explorer and initialize memory.
 
